# WinPinMenu

./: .gitignore  README.md
.github/workflows/: cmake-ci.yml  cmake-publish.yml
buildenv/: CMakeLists.txt  Product.cmake  WinPinMenu.sln
buildenv/cmake/: InstallSetup.cmake  PostBuild.cmake  SignTool.cmake  TargetArch.cmake
buildenv/cpack/: Package.cmake
src/app/: AboutDlg.cpp  AboutDlg.h  Draw.cpp  Draw.h  FileVersionInfo.cpp  FileVersionInfo.h  MainFrm.cpp  MainFrm.h  ShellBrowseMenu.cpp  ShellBrowseMenu.h  ShellMgr.cpp  ShellMgr.h  WinPinMenu.cpp  WinPinMenu.h  WinPinMenu.rc  WinPinMenu.vcxproj  WinPinMenu.vcxproj.filters  app.manifest.in  productmeta.h  productmeta.h.in  resource.h  stdafx.cpp  stdafx.h  targetver.h  taskbarautomation.h  uxthemehelper.h
src/app/res/: WinPinMenu.rc2  app.manifest
src/wtlx/: Draw.cpp  FileVersionInfo.cpp  IatHook.cpp  formattools.cpp  framework.h  targetver.h  wtlx.vcxproj  wtlx.vcxproj.filters
src/wtlx/wtlx/: CoolContextMenu.h  Draw.h  FileVersionInfo.h  IatHook.h  NotifyTrayIcon.h  PictureCtrl.h  TaskBarList.h  UxModeHyperLink.h  UxModePopupMenu.h  dialogresizeex.h  formattools.h  uxthemehelper.h
